# sparrow-ipc

./: CMakeLists.txt  README.md  conanfile.py  environment-dev.yml
.github/workflows/: docs.yaml  integration_tests.yaml  windows.yml
ci/docker/: integration.dockerfile
cmake/: external_dependencies.cmake
docs/source/: main_page.md
include/: sparrow_ipc.hpp
include/sparrow_ipc/: deserialization_context.hpp  deserialize.hpp  deserialize_array_impl.hpp  deserialize_decimal_array.hpp  deserialize_duration_array.hpp  deserialize_fixed_size_binary_array.hpp  deserialize_interval_array.hpp  deserialize_null_array.hpp  deserialize_primitive_array.hpp  deserialize_run_end_encoded_array.hpp  deserialize_time_related_arrays.hpp  deserialize_union_array.hpp  deserialize_utils.hpp  deserialize_variable_size_binary_array.hpp  deserialize_variable_size_binary_view_array.hpp  deserializer.hpp  dictionary_cache.hpp  dictionary_iteration.hpp  dictionary_tracker.hpp  dictionary_utils.hpp  encapsulated_message.hpp  flatbuffer_utils.hpp  metadata.hpp  serialize_utils.hpp  serializer.hpp  serializer_reserve.hpp  stream_file_serializer.hpp  utils.hpp
include/sparrow_ipc/arrow_interface/: arrow_schema.hpp
include/sparrow_ipc/arrow_interface/arrow_array/: private_data.hpp
include/sparrow_ipc/arrow_interface/arrow_schema/: private_data.hpp
include/sparrow_ipc/config/: sparrow_ipc_version.hpp
integration_tests/: test_integration_tools.cpp
integration_tests/include/: integration_tools.hpp
integration_tests/src/: integration_tools.cpp
src/: array_deserialization_dictionaries.cpp  array_deserialization_dictionaries.hpp  array_deserializer.cpp  array_deserializer.hpp  array_deserializer_impl.hpp  bit_width.hpp  compression_impl.hpp  deserialize.cpp  deserialize_fixed_size_binary_array.cpp  deserialize_fixedsizebinary_array.cpp  deserialize_null_array.cpp  deserialize_run_end_encoded_array.cpp  deserialize_union_array.cpp  deserialize_utils.cpp  dictionary_cache.cpp  dictionary_tracker.cpp  dictionary_utils.cpp  flatbuffer_utils.cpp  serialize_utils.cpp  stream_file_serializer.cpp  utils.cpp
src/arrow_interface/arrow_schema/: private_data.cpp
tests/: CMakeLists.txt  metadata_sample.hpp  test_arrow_array.cpp  test_arrow_schema.cpp  test_compression.cpp  test_de_serialization_with_files.cpp  test_deserialize_utils.cpp  test_dictionary.cpp  test_dictionary_components.cpp  test_dictionary_ordered.cpp  test_helper.hpp  test_map_keys_sorted.cpp  test_serialize_utils.cpp  test_serializer.cpp  test_stream_file_serializer.cpp  test_utils.cpp
tests/data/: map_array_sorted.json  ordered_dictionary.json
tests/include/: sparrow_ipc_tests_helpers.hpp  test_helper.hpp  test_utils.hpp
